# Yield-prediction-fastapi

./: .gitignore  API_README.md  README.md  all_seasons.joblib  main.py  payload.json  pyproject.toml  requirements.txt  server.py  target_encoder.joblib  test_api.py  xgb_model.joblib
